<resources>
    <string name="FACEBOOK_APP_ID">1642609692619860</string>
    <string name="GOOGLE_MAP_KEY_ID">AIzaSyD-p3JFdMl2cGLyJX4ql1MYfzC90cWp6yk</string>
    <string name="action_search">Search</string>
    <string name="choose_address">Choose Address</string>
    <string name="address_add_new">Add New Address</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_home">Home</string>
    <string name="title_activity_my_orders">My Orders</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hint_mobile"><small><i>10 digit Mobile Number</i></small></string>
    <string name="hint_otp_code"><small><i>Enter 4-digit code</i></small></string>
    <string name="hint_verify_email"><small><i>Enter your email id</i></small></string>
    <string name="hint_verify_name"><small><i>Enter your name</i></small></string>
    <string name="call">call</string>
    <string name="follow">follow</string>
    <string name="map">map</string>
    <string name="feedback">feedback</string>
    <string name="discover">Discover</string>
    <string name="wallet">My Wallet</string>
    <string name="outlet_detail">Outlet Detail</string>
    <string name="offer_detail">Offer Detail</string>
    <string name="notification">Notifications</string>
    <string name="about">About Us</string>
    <string name="invite">Invite Friends</string>
    <string name="upload_bill">Upload Bill</string>
    <string name="write_to_us">Write to us</string>
    <string name="order_online">Order Online</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="order_details">Order Details</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="suggest_outlet">Suggest an outlet</string>
    <string name="faq">FAQs</string>
    <string name="profile">Profile</string>
    <string name="available_offers">Offers Available</string>
    <string name="title_activity_shopping_vouchers">Shopping Vouchers</string>
    <string name="title_activity_recharge">Mobile Recharge</string>
    <string name="title_activity_voucher_list">Voucher List</string>
    <string name="title_activity_voucher_details">Voucher Details</string>
    <string name="search_outlet_hint">Search Outlets</string>
    <string name="search_menu_hint">Search for menu items</string>
    <string name="recommended_category">Recommended</string>
    <string name="multiple_customisation_error">Multiple customisations found. Please remove from cart.</string>
    <string name="x_sign">&#160;&#160;&#160;X&#160;&#160;</string>
    <string name="action_deep_link">twyst</string>
    <string name="invites">Send invitations!</string>
    <string name="welcome">App Invite\nQuickstart</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try!</string>
    <string name="invitation_deep_link">demo://</string>
    <string name="deep_link_fmt">Deep Link: %s</string>
    <string name="invitation_id_fmt">Invitation ID: %s</string>
    <string name="sent_invitations_fmt">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="checkin">Check-in Success!</string>
    <string name="account">Accounts</string>
    <string name="connected_account">Connected Accounts</string>
    <string name="verify_number_hint_enter_phone">Please enter your Mobile Number</string>
    <string name="verify_number_hint_fetch">Waiting for OTP</string>
    <string name="verify_number_hint_waiting">Reading the received OTP</string>
    <string name="verify_number_hint_enter_code">Please enter 4-digit code you received</string>
    <string name="verify_number_hint_verify">Verifying OTP</string>
    <string name="verify_number_hint_verified">Number verified</string>
    <string name="verify_number_resend_text">Didn\'t receive code?</string>
    <string name="verify_number_resend">Resend</string>
    <string name="verify_number_manually">Enter OTP manually</string>
    <string name="verify_number_phone_hint">10 digit Mobile Number</string>
    <string name="verify_number_code_hint">Enter 4-digit code</string>
    <string name="title_activity_food_vouchers">Food Vouchers</string>
    <string name="title_activity_twyst_cash_history">My Twyst Cash</string>
    <string name="web_view_activity">Detail</string>
    <string name="my_twyst_cash_balance">My Twyst Cash Balance</string>
    <string name="earn_more">Earn More</string>
    <string name="happy_shopping_message">We have sent you the Voucher Code along with Instructions to your email ID</string>
    <string name="email_not_verified_line1">Your Email Id %s is not verified. </string>
    <string name="email_not_verified_line2">Please verify your email ID to receive the voucher code</string>
    <string name="verif_mail_sent">We\'ve resent the email verifcation link. Please verify your email-id and try again.</string>
 <string name="terms_conditions">
     &#8226; Offers (2 or more) cannot be clubbed.\n
     &#8226; Offers are not valid on specially priced combinations e.g. any other buffet/brunch deal/corporate dining rate/happy hours etc.\n
     &#8226; Only 1 voucher/offer can be used per bill generated.\n
     &#8226; In certain cases, specific items may be part of the offer. The availability of the specific items is not guaranteed and must be checked with the outlet before using the offer.\n
     &#8226; The offers are provided at the sole discretion of the merchant, and the merchant reserves the right to alter or withdraw the offer at any time.\n
     &#8226; Offers/ vouchers consisting of alcohol/alcohol-based products will be available only to individuals above legal drinking age. The establishment reserves the right to verify the customer\'s age before providing such reward.</string>
    <string name="faq_support_text">For more, write to us at </string>
    <string name="faq_support_mail">support@twyst.in</string>
 <string name="faq_body">
     <![CDATA[
<p><b>How to Twyst?</b></p>
<p><b>&middot; &nbsp; &nbsp;  What is Twyst?</b></p>
<p>Twyst is a service that lets you order food from neighbouring restaurants with the convenience of an App. Whats more it lets you earn Cashback everytime you order. The Cashback (in the form of Twyst Cash) can be earned across all restaurants on Twyst, so you don&rsquo;t need to change where you order from based on who is running the best deal! Twyst Cash can be used to Top Up your mobile phone, get online shopping vouchers on popular eCommerce sites as well as save money the next time you order on Twyst.</p>
<p>&nbsp;</p>
<p><b>&middot; &nbsp; &nbsp; What is Twyst Cash?</b></p>
<p>Twyst Cash is the currency in which you get your Cashback on Twyst.</p>
<p>&nbsp;</p>
<p><b>&middot; &nbsp; &nbsp; Where can I use Twyst Cash?</b></p>
<p>Twyst Cash can be used to Top up your mobile phone, get vouchers for online shopping and also vouchers that help you save money when you order on Twyst. We&rsquo;re working to add more categories where you can use Twyst Cash. If you would like a particular category or place where you want to be able to use Twyst Cash, do write to us and we will do our best to bring them on board.</p>
<p>&nbsp;</p>
<p><b>&middot; &nbsp; &nbsp; Can I use Twyst Cash to order or pay for my food?</b></p>
<p>Right now, you can use Twyst Cash to utilise offers when ordering food. We will soon introduce a way for you to make a part payment for your order itself with Twyst Cash.</p>
<p>&nbsp;</p>
<p><b>&middot; &nbsp; &nbsp; Why is the Cashback rate at a restaurant not a fixed amount?</b></p>
<p>Well, like most things, you give more to get more You will usually earn the highest amount of Twyst Cash at any outlet when you make an online payment (pay via the app instead of cash on delivery) and have a larger order value.</p>
<p>&nbsp;</p>
<p><b>&middot; &nbsp; &nbsp; I selected Current Location but its showing the wrong line1?</b></p>
<p>In some cases, the line1 for a particular GPS location may be incorrectly detected. If you’re sure that the location being detected is correct, you can always edit the actual line1 before placing the final order.</p>
<p><b>&middot; &nbsp; &nbsp; I can&rsquo;t find XYZ outlet on Twyst?</b></p>
<p>We only show you the outlets that deliver to your selected location (you can choose your current location or even a different location) as per the information given to us by the outlet. If you’re sure that the outlet delivers to your area try making sure that your phone is correctly picking up the location by enabling GPS.</p>
<p><b>&middot; &nbsp; &nbsp; Can I cancel an order once I have placed it?</b></p>
<p>Yes – but only till the restaurant has accepted it. Once they start working on the order, we don&rsquo;t think it&rsquo;s fair to allow cancellation. You can however request the outlet and if they&rsquo;re ok, the order can be cancelled. For more on cancellation, check out the Terms of Use.</p>
<p><b>&middot; &nbsp; &nbsp; Why am I charged a \'Handling Fee\' for some vouchers?</b></p>
<p>We charge a small handling fee for some of the vouchers. This helps us pay our bills and ensures that we keep getting you the Cashback that you love!</p>
<p><b>&middot; &nbsp; &nbsp; I ordered on Twyst but I didn’t get any Cashback… why??</b></p>
<p>The only case where you don’t get Cashback for ordering via Twyst is when you apply a food voucher to order on Twyst. You cannot GET Twyst Cash and USE Twyst Cash on the same order – but hey, you did save when you applied the offer. If you didn’t apply an offer to your order but still didn’t get any Twyst Cash then please write to us and we’ll look into it.</p>
<p><b>&middot; &nbsp; &nbsp; Does Twyst Cash expire?</b></p>
<p>Short answer - Yes. Twyst Cash is valid for a period of 6 months from when they are earned. The Twyst Cash that you earn earlier will be used earlier every time you redeem, so you shouldn’t have to worry about expiry, but in case you do have expiring Twyst Cash we’ll notify you well in advance.</p>
]]>

 </string>
<string name="earn_more_body">
     <![CDATA[
<p>&middot; &nbsp; Upload your bill every time you visit or order from a Twyst
outlet.</p>
<p>&middot; &nbsp; Invite friends to join you on Twyst – get Twyst cash for
each friend who joins.</p>
<p>&middot; &nbsp; Submit offers!</p>
<p>&middot; &nbsp; Suggest outlets you want on Twyst!</p>
<p>&middot; &nbsp; Favourite an outlet.</p>
<p>&middot; &nbsp; Like an offer.</p>
]]>
 </string>
    <string name="use_offer">Use Offer</string>
    <string name="item_total">Item Total</string>
    <string name="vat">VAT</string>
    <string name="service_tax">Service Tax</string>
    <string name="delivery_charge">Delivery Charges</string>
    <string name="packaging_charges">Packaging Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="suggestion">Please add any special Instructions here...</string>
    <string name="no_address_found">Sorry, no Address found</string>
    <string name="choose_location_description_line1">Where would you like</string>
    <string name="choose_location_description_line2">your food to be delivered?</string>
    <string name="order_assumed_delivery_message">Your order should have been delivered</string>
    <string name="order_assumed_delivery_message_failure">No! I haven\'t received it yet.</string>
    <string name="order_assumed_delivery_message_success">Yes! Let me have my cashback.</string>
</resources>