<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".DiscoverActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="200"
        android:icon="@drawable/icon_menu_notification"
        android:title="@string/action_notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_wallet"
        android:icon="@drawable/icon_menu_wallet"
        android:orderInCategory="300"
        android:title="@string/action_wallet"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_menu_home"
        android:orderInCategory="300"
        android:title="@string/action_home"
        android:visible="false"
        app:showAsAction="always"/>
</menu>
