<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider" />

    <LinearLayout
        android:id="@+id/llOfferApplied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvOfferTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Offer Applied"
            android:textColor="@color/primary"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvOfferApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/primary"
            android:textSize="@dimen/outlet_offer_header_textsize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llItemTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/item_total"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvItemTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/vat"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvVat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llServiceTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/service_tax"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvServiceTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="YES"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDeliveryCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/delivery_charge"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvDelieveryCharges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPackagingCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/packaging_charges"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />

        <TextView
            android:id="@+id/tvPackagingCharges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_coupon_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter coupon code"
                    android:padding="10dp"
                    android:textColor="@color/black_text_color"
                    android:textSize="12dp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/bApplyCoupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="Apply"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCouponInitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <CheckBox
                android:id="@+id/cb_coupon_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Have a coupon code?"
                android:textColor="@color/colorSecondaryBlue"
                android:textSize="12dp" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_divider" />

    <LinearLayout
        android:id="@+id/llGrandTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/grand_total"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGrandTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/outlet_offer_header_textsize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edit_text"
        android:dividerPadding="4dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etSuggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="left"
            android:hint="@string/suggestion"
            android:padding="10dp"
            android:textColor="@color/black_text_color"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>