<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingTop="36dp">


    <LinearLayout
        android:id="@+id/ll_delivery_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/layout_small_margin"
            android:text="@string/choose_location_description_line1"
            android:textColor="@color/white"
            android:textSize="@dimen/signup_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/choose_location_description_line2"
            android:textColor="@color/white"
            android:textSize="@dimen/signup_header" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linlay_choose_location_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/choose_location_background"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Current Location"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_extra_wide_text_size" />

            <ImageView
                android:layout_width="@dimen/layout_huge_text_size"
                android:layout_height="@dimen/layout_huge_text_size"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/choose_location_current_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_choose_location_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/choose_location_background"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Saved Location"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_extra_wide_text_size" />

            <ImageView
                android:layout_width="@dimen/layout_huge_text_size"
                android:layout_height="@dimen/layout_huge_text_size"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/choose_location_saved_icon" />
        </LinearLayout>

        <include
            android:id="@+id/loader_row"
            layout="@layout/show_loader_row" />

        <ListView
            android:id="@+id/lv_saved_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fadeScrollbars="true"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/no_saved_address_row"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_address_found"
                android:textSize="@dimen/address_medium_text_size" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linlay_choose_location_add_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/choose_location_background"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Add New Location"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_extra_wide_text_size" />

            <ImageView
                android:layout_width="@dimen/layout_huge_text_size"
                android:layout_height="@dimen/layout_huge_text_size"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:src="@drawable/choose_location_add_icon" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_skip_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_primary"
                android:focusable="false"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="Skip"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </FrameLayout>

    </LinearLayout>


</LinearLayout>
